[MagicStack] ModuleRegistry shouldn't be a singleton class.
In this CL:
1) ModuleRegistry is created by ChromeTabbedActivity, and is
   plumbed to magic stack. This allows one ModuleRegistry per
   ChromeActivity, and is safe to register builder instances based on
   the ChromeActivity's data, like TabModel. A refactor is done to
   plumb the ModuleRegistry instance to Start surface | NTP.
2) Move some static APIs from ModuleRegistry to singleton class
   HomeModulesConfigManager. It allows HomeModulesConfigSettings to
   access the set of configurable modules.
3) Replace ModuleProviderBuilder#isEligible() with a new
   ModuleConfigChecker interface. It allows the details remain in each
   module builder.

Bug: b/324312039
Change-Id: Ib71d948125eb30b1a4aeb5ec6fd8d5c0bf55ee19
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5293117
Reviewed-by: Calder Kitagawa <ckitagawa@chromium.org>
Reviewed-by: Yue Zhang <yuezhanggg@chromium.org>
Reviewed-by: Xinyi Ji <xinyiji@chromium.org>
Commit-Queue: Xi Han <hanxi@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1261293}