@@ -4,7 +4,6 @@
 
 package org.chromium.chrome.browser.magic_stack;
 
-import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import androidx.fragment.app.FragmentManager;
@@ -22,19 +21,16 @@ import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnit;
 import org.mockito.junit.MockitoRule;
 
-import org.chromium.base.shared_preferences.SharedPreferencesManager;
 import org.chromium.base.test.BaseRobolectricTestRunner;
 import org.chromium.chrome.R;
 import org.chromium.chrome.browser.magic_stack.ModuleDelegate.ModuleType;
 import org.chromium.chrome.browser.preferences.ChromePreferenceKeys;
-import org.chromium.chrome.browser.preferences.ChromeSharedPreferences;
 import org.chromium.chrome.browser.profiles.Profile;
 import org.chromium.components.browser_ui.settings.ChromeSwitchPreference;
 import org.chromium.ui.base.TestActivity;
 
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.Set;
+import java.util.ArrayList;
+import java.util.List;
 
 /** Unit tests for {@link HomeModulesConfigSettings}. */
 @RunWith(BaseRobolectricTestRunner.class)
@@ -44,7 +40,7 @@ public class HomeModulesConfigSettingsUnitTest {
     private ActivityScenario<TestActivity> mActivityScenario;
     private TestActivity mActivity;
     @Mock private Profile mProfile;
-    @Mock private ModuleRegistry mMockModuleRegistry;
+    @Mock private HomeModulesConfigManager mHomeModulesConfigManager;
 
     @Before
     public void setUp() {
@@ -63,22 +59,19 @@ public class HomeModulesConfigSettingsUnitTest {
     @Test
     @SmallTest
     public void testLaunchHomeModulesConfigSettings() {
-        mMockModuleRegistry = mock(ModuleRegistry.class);
-        Set<Integer> moduleTypeRegisteredForTest = new HashSet<>(Arrays.asList(0, 1));
-        when(mMockModuleRegistry.getRegisteredModuleTypes())
-                .thenReturn(moduleTypeRegisteredForTest);
-        when(mMockModuleRegistry.isModuleConfigurable(ModuleType.SINGLE_TAB)).thenReturn(false);
-        when(mMockModuleRegistry.isModuleEligibleToBuild(ModuleType.SINGLE_TAB)).thenReturn(true);
-        when(mMockModuleRegistry.isModuleEligibleToBuild(ModuleType.PRICE_CHANGE)).thenReturn(true);
-        when(mMockModuleRegistry.isModuleConfigurable(ModuleType.PRICE_CHANGE)).thenReturn(true);
-        ModuleRegistry.setInstanceForTesting(mMockModuleRegistry);
+        List<Integer> moduleTypeShownInSettingsForTest = List.of(1);
+        when(mHomeModulesConfigManager.getModuleListShownInSettings())
+                .thenReturn(moduleTypeShownInSettingsForTest);
+        when(mHomeModulesConfigManager.getPrefModuleTypeEnabled(ModuleType.PRICE_CHANGE))
+                .thenReturn(true);
 
         String singleTabNotExistedPreferenceKey =
                 ChromePreferenceKeys.HOME_MODULES_MODULE_TYPE.createKey(String.valueOf(0));
         String priceChangePreferenceKey =
                 ChromePreferenceKeys.HOME_MODULES_MODULE_TYPE.createKey(String.valueOf(1));
-        SharedPreferencesManager sharedPreferencesManager = ChromeSharedPreferences.getInstance();
-        sharedPreferencesManager.writeBoolean(priceChangePreferenceKey, true);
+        when(mHomeModulesConfigManager.getPreferenceKey(ModuleType.PRICE_CHANGE))
+                .thenReturn(priceChangePreferenceKey);
+        HomeModulesConfigManager.setInstanceForTesting(mHomeModulesConfigManager);
 
         FragmentManager fragmentManager = mActivity.getSupportFragmentManager();
         HomeModulesConfigSettings fragment =
@@ -105,16 +98,14 @@ public class HomeModulesConfigSettingsUnitTest {
     @Test
     @SmallTest
     public void testLaunchHomeModulesConfigSettingsWithBlankPage() {
-        mMockModuleRegistry = mock(ModuleRegistry.class);
-        Set<Integer> moduleTypeRegisteredForTest = new HashSet<>(Arrays.asList(0, 1));
-        when(mMockModuleRegistry.getRegisteredModuleTypes())
-                .thenReturn(moduleTypeRegisteredForTest);
-        when(mMockModuleRegistry.isModuleEligibleToBuild(ModuleType.SINGLE_TAB)).thenReturn(true);
-        when(mMockModuleRegistry.isModuleConfigurable(ModuleType.SINGLE_TAB)).thenReturn(false);
-        when(mMockModuleRegistry.isModuleEligibleToBuild(ModuleType.PRICE_CHANGE))
-                .thenReturn(false);
-        when(mMockModuleRegistry.isModuleConfigurable(ModuleType.PRICE_CHANGE)).thenReturn(true);
-        ModuleRegistry.setInstanceForTesting(mMockModuleRegistry);
+        List<Integer> moduleTypeShownInSettingsForTest = new ArrayList<>();
+        when(mHomeModulesConfigManager.getModuleListShownInSettings())
+                .thenReturn(moduleTypeShownInSettingsForTest);
+        String priceChangePreferenceKey =
+                ChromePreferenceKeys.HOME_MODULES_MODULE_TYPE.createKey(String.valueOf(1));
+        when(mHomeModulesConfigManager.getPreferenceKey(ModuleType.PRICE_CHANGE))
+                .thenReturn(priceChangePreferenceKey);
+        HomeModulesConfigManager.setInstanceForTesting(mHomeModulesConfigManager);
 
         FragmentManager fragmentManager = mActivity.getSupportFragmentManager();
         HomeModulesConfigSettings fragment =
